--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   manual-test:
     if: ${{ github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup .NET SDK
@@ -22,7 +22,7 @@ jobs:
 
   release:
       if: ${{ github.event_name == 'push' }}
-      runs-on: ubuntu-latest
+      runs-on: windows-latest
       steps:
         - uses: actions/checkout@v4
 
