--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -25,6 +25,8 @@ jobs:
       runs-on: windows-latest
       steps:
         - uses: actions/checkout@v4
+          with:
+            lfs: true
 
         - name: Setup .NET SDK
           uses: actions/setup-dotnet@v4
