--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          lfs: true
+
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
@@ -36,10 +39,6 @@ jobs:
         - uses: actions/checkout@v4
           with:
             lfs: true
-
-        - name: Show Directory
-          run: ls ./src/MuMu_RichPresence.Tests/Assets
-          shell: powershell
 
         - name: Setup .NET SDK
           uses: actions/setup-dotnet@v4
