--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -18,15 +18,8 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
-
-      - name: Cache NuGet packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
+          dotnet-version: '8.0.X'
+          cache: true
 
       - name: Run tests manually
         run: dotnet test ./src/
@@ -43,15 +36,8 @@ jobs:
         - name: Setup .NET SDK
           uses: actions/setup-dotnet@v4
           with:
-            dotnet-version: '8.0.x'
-
-        - name: Cache NuGet packages
-          uses: actions/cache@v4
-          with:
-            path: ~/.nuget/packages
-            key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
-            restore-keys: |
-              ${{ runner.os }}-nuget-
+            dotnet-version: '8.0.X'
+            cache: true
 
         - name: Run tests before release
           run: dotnet test ./src/
