Restore with lock file

--- a/src/MuMu_RichPresence/MuMu_RichPresence.csproj
+++ b/src/MuMu_RichPresence/MuMu_RichPresence.csproj
@@ -16,6 +16,7 @@
 
     <!-- This is so that CI can cache nuget dependencies -->
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <PropertyGroup Label="Versioning">
