--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -41,7 +41,7 @@ jobs:
             dotnet-version: '8.0.X'
             cache: true
             cache-dependency-path: '**/packages.lock.json'
-        - run: dotnet restore ./src/ --locked-mode
+        - run: dotnet restore ./src/
 
         - name: Run tests before release
           run: dotnet test ./src/
